FD6SL-31 flex nav menu corrected, displays properly on mobile

--- a/pozyczme/css/style.scss
+++ b/pozyczme/css/style.scss
@@ -25,6 +25,7 @@ body{
     margin: 0 auto;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .nav-logo {
